# histalign

./: LICENSE  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  typical-workflow.md
docs/css/: icons.css
docs/tutorials/: data-preparation.md  index.md  quantifying.md  registration.md  visualisation.md  volume-building.md  your-first-project.md
scripts/: gimp_docs_image_preprocessing.py
src/histalign/: __about__.py  __init__.py  language_helpers.py
src/histalign/application/: AlignmentParameterAggregator.py  AlignmentWidget.py  Histalign.py  HistologySettings.py  HistologySettingsWidget.py  HistologySlice.py  ImageSettings.py  ImageViewer.py  MainMenuBar.py  RotatingLabel.py  SettingsDockWidget.py  ThumbnailDockWidget.py  ThumbnailScrollArea.py  VolumeManager.py  VolumeSettings.py  VolumeSettingsWidget.py  Workspace.py  __init__.py
src/histalign/backend/: __init__.py
src/histalign/backend/array_operations/: __init__.py
src/histalign/backend/ccf/: StructureHierarchyModel.py  StructureNode.py  __init__.py  allen_downloads.py  downloads.py  model_view.py  paths.py
src/histalign/backend/io/: __init__.py  image_conversions.py
src/histalign/backend/maths/: __init__.py
src/histalign/backend/models/: AlignmentParameterAggregator.py  HistologySettings.py  ProjectSettings.py  VolumeSettings.py  __init__.py  errors.py
src/histalign/backend/preprocessing/: __init__.py
src/histalign/backend/quantification/: Quantifier.py  __init__.py  quantification_functions.py  quantification_methods.py  quantifiers.py
src/histalign/backend/registration/: ContourGeneratorThread.py  ReverseRegistrator.py  __init__.py  alignment.py
src/histalign/backend/volume_builder/: __init__.py
src/histalign/backend/workspace/: AtlasHandler.py  HistologySlice.py  VolumeManager.py  Workspace.py  __init__.py
src/histalign/frontend/: __init__.py  common_widgets.py  dialogs.py  events.py  keymap.py  pyside_helpers.py  themes.py
src/histalign/frontend/centralised/: __init__.py
src/histalign/frontend/preprocessing/: __init__.py  prepare.py  results.py
src/histalign/frontend/qa/: HistogramViewerWidget.py  MainMenuBar.py  PopUpTreeView.py  QAMainWindow.py  QAViewerWidget.py  SliceNamesComboBox.py  StructureFinderWidget.py  StructureSelectorFrame.py  StructureTagFrame.py  TreeView.py  __init__.py  dialogs.py  measures.py  viewer.py
src/histalign/frontend/quantification/: __init__.py  analysis_parameters_widgets.py  measure_widgets.py  prepare.py  results.py  view.py  visualisers.py
src/histalign/frontend/registration/: AlignmentButtonDockWidget.py  AlignmentWidget.py  AlphaDockWidget.py  HistologySettingsWidget.py  MainMenuBar.py  ProjectCreateDialog.py  RegistrationMainWindow.py  SettingsDockWidget.py  ThumbnailDockWidget.py  ThumbnailLabel.py  ThumbnailScrollArea.py  VolumeSettingsWidget.py  __init__.py  alignment.py  alpha.py  dialogs.py  settings.py  thumbnails.py
src/histalign/frontend/visualisation/: __init__.py  information.py  navigation.py  views.py
src/histalign/frontend/volume_builder/: __init__.py
src/histalign/io/: __about__.py  __init__.py  language_helpers.py
src/histalign/io/convert/: __init__.py
src/histalign/io/image/: GenericImagePlugin.py  Hdf5ImagePlugin.py  LifImagePlugin.py  PngImagePlugin.py  TiffImagePlugin.py  __init__.py  metadata.py
src/histalign/io/info/: __init__.py
src/histalign/io/project/: __init__.py  projections.py
src/histalign/io/split/: __init__.py
src/histalign/io/transform/: __init__.py  transforms.py
src/histalign/resources/: __init__.py
src/histalign/resources/keymaps/: default.json
tests/backend/registration/: registration-visual-test.ipynb  test_registration.py
tests/backend/registration/resources/: complete_alignment_settings.json  identity_alignment_settings.json  offset_alignment_settings.json  offset_expected_output1.npz  offset_expected_output2.npz  pitch_alignment_settings.json  pitch_expected_output1.npz  re_baseline_test.py  rotation_alignment_settings.json  rotation_expected_output1.npz  scale_alignment_settings.json  scale_expected_output1.npz  shear_alignment_settings.json  shear_expected_output1.npz  translation_alignment_settings.json  translation_expected_output1.npz  yaw_alignment_settings.json  yaw_expected_output1.npz
tests/registration/: registration-visual-test.ipynb  test_registration.py
tests/registration/resources/: complete_alignment_settings.json  complete_expected_output1.npz  identity_alignment_settings.json  identity_expected_output1.npz  offset_alignment_settings.json  offset_expected_output1.npz  offset_expected_output2.npz  pitch_alignment_settings.json  pitch_expected_output1.npz  pitch_expected_output2.npz  re_baseline_test.py  rotation_alignment_settings.json  rotation_expected_output1.npz  scale_alignment_settings.json  scale_expected_output1.npz  scale_expected_output2.npz  shear_alignment_settings.json  shear_expected_output1.npz  translation_alignment_settings.json  translation_expected_output1.npz  yaw_alignment_settings.json  yaw_expected_output1.npz  yaw_expected_output2.npz
